plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/top-mpp/src/jsMain/kotlin/transitiveStory/bottomActual/intermediateSrc/IntermediateMPPClassInBottomActual.kt
package transitiveStory.bottomActual.intermediateSrc

actual class <!LINE_MARKER("descr='Has declaration in common module'")!>IntermediateMPPClassInBottomActual<!>